set position of dialog to fixed, so it is visible from far down the list

--- a/src/app/components/add-edit-booking-dialog/add-edit-booking-dialog.component.css
+++ b/src/app/components/add-edit-booking-dialog/add-edit-booking-dialog.component.css
@@ -2,6 +2,7 @@
     background-color: antiquewhite;
     border-radius: 20px;
     font-size: medium;
+    position: fixed;
 }
 
 #cancel-button, #submit-button{
